--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{titulo}}</h1>
 
-<button (click)="numero = numero + 1 "> +1 </button>
+<button (click)="sumar()"> +1 </button>
 <span>Contador: {{numero}} </span>
-<button (click)="numero =  numero - 1 "> -1 </button>
+<button (click)="restar()"> -1 </button>
