--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>{{titulo}}</h1>
 
-<button (click)="sumar()"> +1 </button>
+<button (click)="acumular(+ 1)"> +1 </button>
 <span>Contador: {{numero}} </span>
-<button (click)="restar()"> -1 </button>
+<button (click)="acumular(- 1)"> -1 </button>
+<hr>
