--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>{{titulo}}</h1>
 
-<button (click)="acumular(+ 1)"> +1 </button>
+<h3>la base es: {{base}}</h3>
+<hr>
+<button (click)="acumular(+ base)"> + {{base}} </button>
 <span>Contador: {{numero}} </span>
-<button (click)="acumular(- 1)"> -1 </button>
+<button (click)="acumular(- base)"> - {{base}} </button>
 <hr>
