--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<h1>{{titulo}}</h1>
 
-<h3>la base es: {{base}}</h3>
-<hr>
-<button (click)="acumular(+ base)"> + {{base}} </button>
-<span>Contador: {{numero}} </span>
-<button (click)="acumular(- base)"> - {{base}} </button>
-<hr>
+
+<app-contador></app-contador>
