--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -1,1 +1,19 @@
-<h1>Heroe component works!!</h1>
+<h1>{{ nombre }}</h1>
+
+<dl>
+    <td>Nombre: </td>
+    <dd>{{nombre}}</dd>
+    <br>
+    <td>Edad: </td>
+    <dd>{{edad}}</dd>
+    <br>
+    <td>Función:</td>
+    <dd>{{obtenerNombre()}}</dd>
+    <br>
+    <td>Capitalizado: </td>
+    <dd>{{ nombreCapitalizado }}</dd>
+</dl>
+
+<button> Cambiar heroe </button>
+
+<button> Cambiar la edad</button>
