Bases: one way data binding - enlazado de una sola vía

--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -14,6 +14,6 @@
     <dd>{{ nombreCapitalizado }}</dd>
 </dl>
 
-<button> Cambiar heroe </button>
+<button (click)="cambiarNombre()"> Cambiar heroe </button>
 
-<button> Cambiar la edad</button>
+<button (click)="cambiarEdad()"> Cambiar la edad</button>
