--- a/src/app/heroes/listado/listado.component.html
+++ b/src/app/heroes/listado/listado.component.html
@@ -1,23 +1,15 @@
 <h2>Listado de Héroes</h2>
-<h3>Listar heroes de forma tradicional</h3>
-<ul>
-    <li>heroes[0]: {{heroes[0]}}</li>
-    <li>heroes[1]: {{heroes[1]}}</li>
-</ul>
-
 <br>
 <h3>listar heroes con la directiva estructural *ngFor de Angular</h3>
 <p>'*ngFor="let heroe of heroes"'</p>
-<dl>
+<button (click)="borrandoHeroe()">Heroe borrado</button>
+<!-- <dl *ngIf="heroeBorrado.length > 0"> -->
+<!-- <dl *ngIf="heroeBorrado !== ''"> -->
+<dl *ngIf="heroeBorrado">
     <td>Heroe borrado</td>
     <dd>{{heroeBorrado}}</dd>
 </dl>
-
+<br>
 <ul *ngFor="let heroe of heroes; let i = index ">
     <li>{{i + 1}} - {{heroe}}</li>
 </ul>
-
-
-
-<br>
-<button (click)="borrandoHeroe()">Borrando heroe</button>
