--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 
-<!-- <app-contador></app-contador> -->
-<!-- <app-heroe></app-heroe> -->
+<app-contador></app-contador>
+<br>
 <app-listado></app-listado>
+<br>
+<app-heroe></app-heroe>
