--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 
-<app-contador></app-contador>
+<!-- <app-contador></app-contador>
 <br>
 <app-listado></app-listado>
 <br>
-<app-heroe></app-heroe>
+<app-heroe></app-heroe> -->
+
+<app-main-page></app-main-page>
