--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -1,1 +1,23 @@
-<p>Dragon Ball Z!</p>
+<h1 class="rainbow-text">Dragon Ball Z!</h1>
+<hr>
+<div class="row">
+    <div class="col">
+        <h3 class="personajes">Pesonajes</h3>
+        <hr>
+        <ul>
+            <li>Krillin - 700</li>
+            <li>Goku - 15,000</li>
+            <li>Vegueta - 8,500</li>
+        </ul>
+    </div>
+
+    <div class="col">
+        <h3 class="agregar">Agregar</h3>
+        <hr>
+        <form action="">
+            <input type="text" placeholder="Nombre">
+            <input type="number" placeholder="Poder">
+            <button>Agregar</button>
+        </form>
+    </div>
+</div>
