--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -14,10 +14,13 @@
     <div class="col">
         <h3 class="agregar">Agregar</h3>
         <hr>
-        <form action="">
+
+        <form (submit)="agregar( $event )">
             <input type="text" placeholder="Nombre">
             <input type="number" placeholder="Poder">
-            <button>Agregar</button>
+            <button type="submit">
+                Agregar
+            </button>
         </form>
     </div>
 </div>
