--- a/src/styles.css
+++ b/src/styles.css
@@ -56,21 +56,35 @@ button:focus{
 }
 
 input{
+  color:rgb(22, 15, 7);
   display: block;
   margin: 5px;
 }
 
 .personajes{
   color:blue;
+  font-weight: bold;
 }
 
 .agregar{
-  color: green
+  color: green;
+  font-weight: bold;
 }
 
 .rainbow-text {
-
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, black);
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, rgb(30, 219, 46));
+  font-weight: bold;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-left: 100px;
+}
+
+input{
+  border-radius: 5px;
+  border: 5px solid rgb(9, 10, 10);
+}
+
+li{
+  color: black;
+  font-weight: bold;
 }
