Bases: usando formsModule - implementando ngSubmit

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -15,7 +15,7 @@
         <h3 class="agregar">Agregar</h3>
         <hr>
 
-        <form (submit)="agregar( $event )">
+        <form (ngSubmit)="agregar()">
             <input type="text" placeholder="Nombre">
             <input type="number" placeholder="Poder">
             <button type="submit">
