--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -16,8 +16,18 @@
         <hr>
 
         <form (ngSubmit)="agregar()">
-            <input type="text" placeholder="Nombre">
-            <input type="number" placeholder="Poder">
+            <input
+                type="text"
+                placeholder="Nombre"
+                [value]="nuevo.nombre"
+                (input)="cambiarNombre( $event)"
+            />
+            <input
+                type="number"
+                placeholder="Poder"
+                [value] = "nuevo.poder"
+            />
+
             <button type="submit">
                 Agregar
             </button>
