--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -12,21 +12,25 @@
     </div>
 
     <div class="col">
-        <h3 class="agregar">Agregar</h3>
+        <h3 class="agregar">Agregar: <small>{{nuevo.nombre}}</small></h3>
         <hr>
 
         <form (ngSubmit)="agregar()">
             <input
                 type="text"
                 placeholder="Nombre"
-                [value]="nuevo.nombre"
-                (input)="cambiarNombre( $event)"
-            />
-            <input
+                name="nombre"
+                [(ngModel)]="nuevo.nombre"
+                />
+                <!-- [value]="nuevo.nombre"
+                (input)="cambiarNombre( $event)" -->
+                <input
                 type="number"
                 placeholder="Poder"
-                [value] = "nuevo.poder"
-            />
+                name="poder"
+                [(ngModel)]="nuevo.poder"
+                />
+                <!-- [value] = "nuevo.poder" -->
 
             <button type="submit">
                 Agregar
