--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -5,9 +5,10 @@
         <h3 class="personajes">Pesonajes</h3>
         <hr>
         <ul>
-            <li>Krillin - 700</li>
-            <li>Goku - 15,000</li>
-            <li>Vegueta - 8,500</li>
+            <li *ngFor="let personaje of personajes">
+            {{ personaje.nombre }} - {{personaje.poder | number}}
+        </li>
+
         </ul>
     </div>
 
@@ -16,21 +17,11 @@
         <hr>
 
         <form (ngSubmit)="agregar()">
-            <input
-                type="text"
-                placeholder="Nombre"
-                name="nombre"
-                [(ngModel)]="nuevo.nombre"
-                />
-                <!-- [value]="nuevo.nombre"
+            <input type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nuevo.nombre" />
+            <!-- [value]="nuevo.nombre"
                 (input)="cambiarNombre( $event)" -->
-                <input
-                type="number"
-                placeholder="Poder"
-                name="poder"
-                [(ngModel)]="nuevo.poder"
-                />
-                <!-- [value] = "nuevo.poder" -->
+            <input type="number" placeholder="Poder" name="poder" [(ngModel)]="nuevo.poder" />
+            <!-- [value] = "nuevo.poder" -->
 
             <button type="submit">
                 Agregar
