--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -7,19 +7,8 @@
     </div>
 
     <div class="col">
-        <h3 class="agregar">Agregar: <small>{{nuevo.nombre}}</small></h3>
-        <hr>
+        <app-agregar [personajes]="personajes" [nuevo]="nuevo">
 
-        <form (ngSubmit)="agregar()">
-            <input type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nuevo.nombre" />
-            <!-- [value]="nuevo.nombre"
-                (input)="cambiarNombre( $event)" -->
-            <input type="number" placeholder="Poder" name="poder" [(ngModel)]="nuevo.poder" />
-            <!-- [value] = "nuevo.poder" -->
-
-            <button type="submit">
-                Agregar
-            </button>
-        </form>
+        </app-agregar>
     </div>
 </div>
