--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -7,8 +7,8 @@
     </div>
 
     <div class="col">
-        <app-agregar [personajes]="personajes" [nuevo]="nuevo">
-
-        </app-agregar>
+        <app-agregar [nuevo]="nuevo"
+        (onNuevoPersonaje)="agregarNuevoPersonaje( $event )">
+    </app-agregar>
     </div>
 </div>
